1.04 (unreleased)
  - Made vim syntax highlighting colors configurable

1.03
  - Mentioned git repository at github.com in POD
  - Added vim syntax highlighting for source code view

1.02
  - Added a Changes file

1.01
  - Made title configurable

1.00
  - Initial release
